+ Added Retrofit for network call. + Call nearbysearch & placedetail api with static param. + Added model class for parse respnse.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,7 +17,7 @@
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Recent Search" />
+            android:title="Recent Places" />
     </group>
 
     <item android:title="Preferences">
