--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF9800</color>
 
+    <color name="colorLightGray">#F0F0F0</color>
+
     <color name="semiTransColorAccent">#A03F51B5</color>
 
 </resources>
